@startuml

    !include ../lexakai/lexakai.theme
    
    title "com.telenav.kivakit.ui.swing.component.status"
    
    interface Listener
    interface StatusDisplay
    
    enum StatusPanel.Display
    {
        NO_HEALTH_PANEL
        SHOW_HEALTH_PANEL
    }
    
    interface StatusDisplay
    {
        --(status)--
        +void status(String message, Object... arguments)
        +void status(Duration displayTime, String message, Object... arguments)
    }
    
    JPanel <|-- StatusPanel
    StatusDisplay <|-- StatusPanel
    Listener <|-- StatusPanel
    class StatusPanel
    {
        --(constructors)--
        +StatusPanel(Display)
        --
        +void update(JavaVirtualMachineHealth)
        #KivaKitTheme theme()
        --(status)--
        +void status(Duration stayFor, Color, String message, Object... arguments)
        +void status(Color, String message, Object... arguments)
    }
    
@enduml

